--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-blinker==1.7.0
-click==8.1.7
-dominate==2.9.0
-Flask==3.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.4
-MarkupSafe==2.1.3
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+dominate==2.9.1
+Flask==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 visitor==0.1.3
-Werkzeug==3.0.6
+Werkzeug==3.1.3
