--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Environment files
+.env
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
 # C extensions
 *.so
 
